2019-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk14/Makefile.in:
	  Don't try to compile library functions that will not work anytime soon.
	* src/SDCCglue.c:
	  Emit sfr locations for pdk14.
	* device/include/stdlib.h:
	  Mark bsearch(), qsort() function pointers as __reentrant for pdk14.

2019-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmem.c:
	  Improve error handling on missing output storage class.

2019-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Implement & for stack objects.
	* device/lib/pdk14/Makefile.in:
	  Don't try to compile library functions that will not work anytime soon.

2019-01-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Better unsigned char comparisons.
	* device/lib/pdk14,
	  configure.ac,
	  configure:
	  Infrastructure for pdk14 library.

2019-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.h,
	  src/pdk/gen.c:
	  Rudimentary support for arguments on the stack.

2019-01-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/pdk/gen.c,
	  src/SDCCsymt.c:
	  Implement basic I/O support (__sfr, __sfr16).
	* src/port.h,
	  src/SDCCsymt.c:
	  Prepare for future pdk13, pdk15 and pdk16 backends.

2019-01-03 Benedikt Freisen <b.freisen AT gmx.net>

	* src/version.awk:
	  Fix bug #2818.

2019-01-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc:
	  Implement support for dummy read from volatile in direct space.

2019-01-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  support/valdiag/tests/bug-2773.c:
	  Fix bug #2773.
	* src/ds390/main.c:
	  Change the name of a hackish predefined macro for standard-compliance.

2018-12-31 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Document default calling convention for z80, z180, r2k, r3ka, ez80_z80, tlcs90, stm8.
	* src/SDCCast.c:
	  Fix bug #2850.
	* src/SDCCsymt.c: